fixed z-index of scoll up button

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@ p {
   bottom: 20px;
   left: 50%;
   opacity: 0;
+  z-index: 100;
   img {
     width: 60px;
     margin-left: -30px;
